# SimplyAutonomous_stack

./: README.md
control/nmpc_path_tracker/: CMakeLists.txt  README.md  package.xml
control/nmpc_path_tracker/include/nmpc_path_tracker/: nmpc_controller.hpp
control/nmpc_path_tracker/scripts/: .gitignore
control/nmpc_path_tracker/scripts/kinematic/: export_ode_model.py  generate_c_code.py
control/nmpc_path_tracker/scripts/kinematic/c_generated_code/: Makefile  acados_sim_solver_nmpc_kinematic_controller.c  acados_sim_solver_nmpc_kinematic_controller.h  acados_solver.pxd  acados_solver_nmpc_kinematic_controller.c  acados_solver_nmpc_kinematic_controller.h  main_nmpc_kinematic_controller.c  main_sim_nmpc_kinematic_controller.c
control/nmpc_path_tracker/scripts/kinematic/c_generated_code/nmpc_kinematic_controller_model/: nmpc_kinematic_controller_expl_ode_fun.c  nmpc_kinematic_controller_expl_vde_adj.c  nmpc_kinematic_controller_expl_vde_forw.c  nmpc_kinematic_controller_model.h
control/nmpc_path_tracker/src/: nmpc_controller.cpp
control/nmpc_path_tracker/src/kinematic/: nmpc_controller.cpp  nmpc_controller_node.cpp
launch/map_launch/: CMakeLists.txt  package.xml
launch/map_launch/launch/: map.launch.xml
launch/planning_launch/: CMakeLists.txt  package.xml
launch/planning_launch/launch/: planning.launch.xml
launch/sensing_launch/sensing_launch/: CMakeLists.txt  package.xml
launch/sensing_launch/sensing_launch/launch/: sensing.launch.xml
launch/vehicle_launch/: CMakeLists.txt  package.xml
launch/vehicle_launch/launch/: vehicle.launch.xml
launch/vehicle_launch/urdf/: vehicle.xacro
mapping/map_loader/: package.xml
mapping/map_loader/launch/: lanelet2_map_loader.launch.xml  pointcloud_map_loader.launch.xml
planning/lanelet2_mission_planner/: CMakeLists.txt  README.md  package.xml
planning/lanelet2_mission_planner/include/lanelet2_mission_planner/: lanelet2_mission_planner.hpp  lanelet2_mission_planner_utils.hpp
planning/lanelet2_mission_planner/src/: lanelet2_mission_planner.cpp  lanelet2_mission_planner_node.cpp  lanelet2_mission_planner_utils.cpp
planning/mpc_planner/: CMakeLists.txt  README.md  package.xml
planning/mpc_planner/include/mpc_planner/: mpc_planner.hpp  mpc_planner_acados.hpp  mpc_planner_acados_steer.hpp
planning/mpc_planner/scripts/: export_ode_model.py  generate_c_code.py
planning/mpc_planner/scripts/acados/: export_ode_model.py  generate_c_code.py
planning/mpc_planner/scripts/acados/c_generated_code/: Makefile  acados_sim_solver_nmpc_planner.c  acados_sim_solver_nmpc_planner.h  acados_solver_nmpc_planner.c  acados_solver_nmpc_planner.h  main_nmpc_planner.c  main_sim_nmpc_planner.c
planning/mpc_planner/scripts/acados/c_generated_code/nmpc_planner_model/: nmpc_planner_expl_ode_fun.c  nmpc_planner_expl_vde_forw.c
planning/mpc_planner/scripts/acados_steer/: export_ode_model.py  generate_c_code.py
planning/mpc_planner/scripts/acados_steer/c_generated_code/: Makefile  acados_sim_solver_nmpc_planner_steer.c  acados_sim_solver_nmpc_planner_steer.h  acados_solver.pxd  acados_solver_nmpc_planner_steer.c  acados_solver_nmpc_planner_steer.h  main_nmpc_planner_steer.c  main_sim_nmpc_planner_steer.c
planning/mpc_planner/scripts/acados_steer/c_generated_code/nmpc_planner_steer_model/: nmpc_planner_steer_expl_ode_fun.c  nmpc_planner_steer_expl_vde_adj.c  nmpc_planner_steer_expl_vde_forw.c  nmpc_planner_steer_model.h
planning/mpc_planner/scripts/c_generated_code/: Makefile  acados_sim_solver_nmpc_planner.c  acados_sim_solver_nmpc_planner.h  acados_solver.pxd  acados_solver_nmpc_planner.c  acados_solver_nmpc_planner.h  main_nmpc_planner.c  main_sim_nmpc_planner.c
planning/mpc_planner/scripts/c_generated_code/nmpc_planner_cost/: nmpc_planner_cost.h  nmpc_planner_cost_ext_cost_0_fun.c  nmpc_planner_cost_ext_cost_0_fun_jac.c  nmpc_planner_cost_ext_cost_0_fun_jac_hess.c  nmpc_planner_cost_ext_cost_e_fun.c  nmpc_planner_cost_ext_cost_e_fun_jac.c  nmpc_planner_cost_ext_cost_e_fun_jac_hess.c  nmpc_planner_cost_ext_cost_fun.c  nmpc_planner_cost_ext_cost_fun_jac.c  nmpc_planner_cost_ext_cost_fun_jac_hess.c
planning/mpc_planner/scripts/c_generated_code/nmpc_planner_model/: nmpc_planner_expl_ode_fun.c  nmpc_planner_expl_ode_hess.c  nmpc_planner_expl_vde_adj.c  nmpc_planner_expl_vde_forw.c  nmpc_planner_impl_dae_fun.c  nmpc_planner_impl_dae_fun_jac_x_xdot_u.c  nmpc_planner_impl_dae_fun_jac_x_xdot_u_z.c  nmpc_planner_impl_dae_fun_jac_x_xdot_z.c  nmpc_planner_impl_dae_jac_x_xdot_u_z.c  nmpc_planner_model.h
planning/mpc_planner/src/: mpc_planner.cpp  mpc_planner_acados.cpp
planning/mpc_planner/src/acados/: mpc_planner_acados.cpp  mpc_planner_acados_node.cpp
planning/mpc_planner/src/acados_steer/: mpc_planner_acados_steer.cpp  mpc_planner_acados_steer_node.cpp
planning/mpc_planner/src/libmpc/: mpc_planner.cpp  mpc_planner_node.cpp
sensing/carla_pointcloud/include/carla_pointcloud/: carla_pointcloud_interface_node.hpp
sensing/carla_pointcloud/src/carla_pointcloud/: carla_pointcloud_interface_node.cpp
sensing/pointcloud_preprocessor_gpu/: CMakeLists.txt  package.xml
sensing/pointcloud_preprocessor_gpu/include/pointcloud_preprocessor_gpu/filtering/: filtering.hpp  kernel.hpp
sensing/pointcloud_preprocessor_gpu/src/filtering/: filtering.cpp  filtering.cu
